--- a/frontend/src/components/Dashbord.css
+++ b/frontend/src/components/Dashbord.css
@@ -5,7 +5,7 @@
 }
 
 .title{
-  color: #ffff;
+  color: #ffffff !important;
 }
 
 .dashboard-container h1 {
@@ -19,6 +19,7 @@
   margin-bottom: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .dashboard-section h2 {
