--- a/frontend/src/components/Product.css
+++ b/frontend/src/components/Product.css
@@ -1,82 +1,30 @@
-.data-management-container {
-    padding: 20px;
-    background-color: #333;
-    color: #fff;
-  }
-  
-  .data-management-container h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: #ff4500;
-  }
-  
-  .data-management-container form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .data-management-container input {
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #555;
-    border-radius: 4px;
-    font-size: 1em;
-    background-color: #444;
-    color: #fff;
-  }
-  
-  .data-management-container button {
-    padding: 10px;
-    background-color: #ff4500;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1em;
-    transition: background-color 0.3s;
-  }
-  
-  .data-management-container button:hover {
-    background-color: #ff6347;
-  }
-  
-  .data-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .data-item {
-    background-color: #444;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    width: 100%;
-    max-width: 400px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .data-item p {
-    margin: 0;
-  }
-  
-  .data-item button {
-    margin-left: 10px;
-    padding: 5px;
-    background-color: #ff4500;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 0.9em;
-    transition: background-color 0.3s;
-  }
-  
-  .data-item button:hover {
-    background-color: #ff6347;
-  }
-  
+/* formStyles.css */
+.container {
+  margin-top: 40px;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  color: #000000;
+}
+
+.titlee {
+  color: #000000;
+}
+
+.textField {
+  margin-bottom: 16px;
+}
+
+.textField input {
+  color: #000000;
+}
+
+.textField label {
+  color: #000000;
+}
+
+.submitButton {
+  margin-top: 16px;
+  background-color: #ffffff;
+  color: #ff4500;
+}
