--- a/bakend/templates/invoice.html
+++ b/bakend/templates/invoice.html
@@ -75,11 +75,13 @@
                     <table>
                         <tr>
                             <td class="title">
-                                <img src="logoSrc" style="width:100%; max-width:300px;">
+                                <img src="logoSrc" style="width:100%; max-width:400px;">
                             </td>
                             <td>
                                 Invoice #: {{invoiceNumber}}<br>
                                 Created: {{invoiceDate}}<br>
+                                Delivery: {{Delivery}}<br>
+                                Return: {{Return}}<br>
                             </td>
                         </tr>
                     </table>
